@@ -76,6 +76,39 @@ CGUIVisualisationControl::~CGUIVisualisationControl(void)
 {
 }
 
+void CGUIVisualisationControl::PersistState()
+{
+  if (!m_pVisualisation) return;
+  int np = 0;
+  char **presets = NULL;
+  m_pVisualisation->GetPresets(&presets, &g_stSettings.m_VisualisationPreset, &np, &g_stSettings.m_VisualitionLocked);
+  if (m_bLocked != g_stSettings.m_VisualitionLocked && m_bLockChanged)
+  {
+    g_settings.Save();
+    m_bLockChanged = false;
+    m_bLocked = g_stSettings.m_VisualitionLocked;
+  }
+}
+
+void CGUIVisualisationControl::ReloadState()
+{
+  if (!m_pVisualisation) return;
+  if (g_stSettings.m_VisualisationPreset != -1)
+  {
+    m_pVisualisation->OnAction(CVisualisation::VIS_ACTION_LOAD_PRESET, &g_stSettings.m_VisualisationPreset);
+  }
+  if (m_pVisualisation->IsLocked() != g_stSettings.m_VisualitionLocked)
+    m_pVisualisation->OnAction(CVisualisation::VIS_ACTION_LOCK_PRESET);
+  m_bLocked = g_stSettings.m_VisualitionLocked;
+}
+
+void CGUIVisualisationControl::ResetState()
+{
+  g_stSettings.m_VisualisationPreset = -1;
+  g_stSettings.m_VisualitionLocked = false;
+  m_bLockChanged = true;
+}
+
 void CGUIVisualisationControl::FreeVisualisation()
 {
   if (!m_bInitialized) return;
@@ -92,15 +125,7 @@ void CGUIVisualisationControl::FreeVisualisation()
   if (m_pVisualisation)
   {
     //remember preset and lockstate
-    int np = 0;
-    char **presets = NULL;
-    m_pVisualisation->GetPresets(&presets, &g_stSettings.m_VisualisationPreset, &np, &g_stSettings.m_VisualitionLocked);
-    if (m_bLocked != g_stSettings.m_VisualitionLocked && m_bLockChanged)
-    {
-      g_settings.Save();
-      m_bLockChanged = false;
-      m_bLocked = g_stSettings.m_VisualitionLocked;
-    }
+    PersistState();
 
     OutputDebugString("Visualisation::Stop()\n");
     m_pVisualisation->Stop();
@@ -118,11 +143,13 @@ void CGUIVisualisationControl::FreeVisualisation()
   CLog::Log(LOGDEBUG, "FreeVisualisation() done");
 }
 
-void CGUIVisualisationControl::LoadVisualisation()
+void CGUIVisualisationControl::LoadVisualisation(bool bNewVisualisation)
 {
   CSingleLock lock (m_critSection);
   if (m_pVisualisation)
     FreeVisualisation();
+  if (bNewVisualisation) ResetState();
+
   m_bInitialized = false;
 
   /* check if any other control beat us to the punch */
@@ -157,6 +184,9 @@ void CGUIVisualisationControl::LoadVisualisation()
 
     // Create new audio buffers
     CreateBuffers();
+
+    //restore preset and lockstate
+    ReloadState();
 
     m_globalvis = true;
   }
@@ -198,11 +228,7 @@ void CGUIVisualisationControl::Render()
     }
     else if (!m_currentVis.Equals(g_guiSettings.GetString("MyMusic.Visualisation")))
     { // vis changed - reload
-      g_stSettings.m_VisualisationPreset = -1;
-      g_stSettings.m_VisualitionLocked = false;
-      m_bLockChanged = true;
-
-      LoadVisualisation();
+      LoadVisualisation(true);
 
       if (g_guiSettings.GetBool("Karaoke.Enabled"))
         g_application.m_CdgParser.Render();
@@ -253,13 +279,6 @@ void CGUIVisualisationControl::OnInitialize(int iChannels, int iSamplesPerSec, i
   m_pVisualisation->Start(m_iChannels, m_iSamplesPerSec, m_iBitsPerSample, strFile);
   if (!m_bInitialized)
   {
-    if (g_stSettings.m_VisualisationPreset != -1)
-    {
-      m_pVisualisation->OnAction(CVisualisation::VIS_ACTION_LOAD_PRESET, &g_stSettings.m_VisualisationPreset);
-      if (m_pVisualisation->IsLocked() != g_stSettings.m_VisualitionLocked)
-        m_pVisualisation->OnAction(CVisualisation::VIS_ACTION_LOCK_PRESET);
-      m_bLocked = g_stSettings.m_VisualitionLocked;
-    }
     UpdateAlbumArt();
   }
   m_bInitialized = true;
